gcc/tree-vectorizer.h
@@ -263,6 +263,9 @@ extern enum verbosity_levels vect_verbosity_level;
 /* Number of loops, at the beginning of vectorization.  */
 extern unsigned int vect_loops_num;
 
+/* Bitmap of virtual variables to be renamed.  */
+extern bitmap vect_vnames_to_rename;
+
 /*-----------------------------------------------------------------*/
 /* Function prototypes.                                            */
 /*-----------------------------------------------------------------*/
